# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: github-actions.yml
page_analyzer/: app.py  parse_page.py  urls_repo.py  validator.py
page_analyzer/templates/: base.html  index.html  show.html  url.html  urls.html
page_analyzer/templates/components/: messages.html  navbar.html
